--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -42,14 +42,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsApplicationDataAccess.cs" />
-    <Compile Include="clsApplicationTypesDataAccess.cs" />
+    <Compile Include="clsApplicationTypeDataAccess.cs" />
     <Compile Include="clsCountryDataAccess.cs" />
     <Compile Include="clsDataAccessSetting.cs" />
-    <Compile Include="clsLicenseClassesDataAccess.cs" />
+    <Compile Include="clsDriverDataAccess.cs" />
+    <Compile Include="clsInternationalLicenseDataAccess.cs" />
+    <Compile Include="clsLicenseDataAccess.cs" />
+    <Compile Include="clsLicenseClassDataAccess.cs" />
     <Compile Include="clsLocalDrivingApplicationLicenseDataAccess.cs" />
     <Compile Include="clsPersonDataAccess.cs" />
-    <Compile Include="clsTestTypesDataAccess.cs" />
+    <Compile Include="clsTestDataAccess.cs" />
+    <Compile Include="clsTestTypeDataAccess.cs" />
     <Compile Include="clsUserDataAccess.cs" />
+    <Compile Include="clsDetainedLicenseDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
