--- a/InterFaceLayer/InterFaceLayer/InterFaceLayer.csproj
+++ b/InterFaceLayer/InterFaceLayer/InterFaceLayer.csproj
@@ -58,11 +58,23 @@
     <Compile Include="Account Setting\CurrentUserInfofrm.Designer.cs">
       <DependentUpon>CurrentUserInfofrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddUpdatefrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddUpdatefrm.Designer.cs">
+      <DependentUpon>AddUpdatefrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\CtrlChangePassword.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\CtrlChangePassword.Designer.cs">
       <DependentUpon>CtrlChangePassword.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\CtrlEditPersonInfo.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\CtrlEditPersonInfo.Designer.cs">
+      <DependentUpon>CtrlEditPersonInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\CtrlShowPersonInfo.cs">
       <SubType>UserControl</SubType>
@@ -88,6 +100,18 @@
     <Compile Include="MainFrm.Designer.cs">
       <DependentUpon>MainFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="People\PeopleFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="People\PeopleFrm.Designer.cs">
+      <DependentUpon>PeopleFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="People\ShowPersonInfofrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="People\ShowPersonInfofrm.Designer.cs">
+      <DependentUpon>ShowPersonInfofrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\clsGlobal.cs" />
@@ -97,8 +121,14 @@
     <EmbeddedResource Include="Account Setting\CurrentUserInfofrm.resx">
       <DependentUpon>CurrentUserInfofrm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AddUpdatefrm.resx">
+      <DependentUpon>AddUpdatefrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\CtrlChangePassword.resx">
       <DependentUpon>CtrlChangePassword.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\CtrlEditPersonInfo.resx">
+      <DependentUpon>CtrlEditPersonInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\CtrlShowPersonInfo.resx">
       <DependentUpon>CtrlShowPersonInfo.cs</DependentUpon>
@@ -109,8 +139,17 @@
     <EmbeddedResource Include="Login\LoginFrm.resx">
       <DependentUpon>LoginFrm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="People\PeopleFrm.resx">
+      <DependentUpon>PeopleFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainFrm.resx">
       <DependentUpon>MainFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="People\ShowPersonInfofrm.aa.resx">
+      <DependentUpon>ShowPersonInfofrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="People\ShowPersonInfofrm.resx">
+      <DependentUpon>ShowPersonInfofrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
